Java 11 related warning removal